src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__concat_idents! (parse it_sums_tuple_backtracking).snap
---
source: src/type_atoms/adt/tuple.rs
expression: "crate::parse::<P<(Rep<P<(Punct, Punct, Ident, Ident)>>, Punct)>>(q.clone())"
---
Ok(
    P(
        (
            Rep(
                [
                    P(
                        (
                            Punct {
                                char: '>',
                                spacing: Joint,
                            },
                            Punct {
                                char: '>',
                                spacing: Alone,
                            },
                            Ident(
                                h1,
                            ),
                            Ident(
                                h2,
                            ),
                        ),
                    ),
                    P(
                        (
                            Punct {
                                char: '>',
                                spacing: Joint,
                            },
                            Punct {
                                char: '>',
                                spacing: Alone,
                            },
                            Ident(
                                h3,
                            ),
                            Ident(
                                h4,
                            ),
                        ),
                    ),
                ],
            ),
            Punct {
                char: '!',
                spacing: Alone,
            },
        ),
    ),
)
