src/type_atoms/adt/snapshots/syn_state_machine__type_atoms__adt__tuple__tests__it_sums_tuple_backtracking.snap
---
source: src/type_atoms/adt/tuple.rs
expression: "(insta_match_test!(+ parse (Rep<(Punct, Punct, Ident, Ident)>, Punct) : >> h1\n        h2 >> h3 h4!),\n    insta_match_test!(* peek (Rep<(Punct, Punct, Ident, Ident)>, Punct) : >>\n        h1 h2 >> h3 h4!))"
---
(
    Ok(
        (
            Rep(
                [
                    (
                        Punct {
                            char: '>',
                            spacing: Joint,
                        },
                        Punct {
                            char: '>',
                            spacing: Alone,
                        },
                        Ident(
                            h1,
                        ),
                        Ident(
                            h2,
                        ),
                    ),
                    (
                        Punct {
                            char: '>',
                            spacing: Joint,
                        },
                        Punct {
                            char: '>',
                            spacing: Alone,
                        },
                        Ident(
                            h3,
                        ),
                        Ident(
                            h4,
                        ),
                    ),
                ],
            ),
            Punct {
                char: '!',
                spacing: Alone,
            },
        ),
    ),
    Some(
        9,
    ),
)
